--- a/css/styles.css
+++ b/css/styles.css
@@ -28,12 +28,11 @@ img {
 .container {
     width: 1200px;
     padding: 0 15px;
-    margin: 0;
+    margin: 0 auto;
 }
 /*====================HEADER====================*/
 .header {
     border-bottom: 1px solid #ECECEC;
-    width: 1600px;
     padding: 0 215px;
 }
 .header .container {
@@ -79,13 +78,15 @@ img {
 .header-nav-item:focus,
 .header-nav-item:hover,
 .mail-item:hover,
+.mail-item:focus,
+.tel-item:hover,
 .tel-item:focus {
     color: var(--accent-color);
 }
 .header-nav-item {
     color: #000000;
 }
-.mail-item 
+.mail-item, 
 .tel-item {
     color: #757575;
 }
@@ -93,7 +94,6 @@ img {
 
 /*====================HERO====================*/
 .hero {
-    width: 1600px;
     background-color: var(--accent-color-background);
     padding: 0 215px;
 }
@@ -108,8 +108,8 @@ img {
 .title {
     font-family: var(--main-font);
     font-weight: 900;
-    line-height: 60px;
-    font-size: 0.733;
+    font-size: 44px;
+    line-height: 1.363;
     letter-spacing: 0.06em;
     text-align: center;
     text-transform: uppercase;
@@ -145,7 +145,6 @@ img {
 
 /*====================FEATURES====================*/
 .features-section {
-    width: 1600px;
     padding: 0 215px;
 }
 .features {
@@ -180,7 +179,6 @@ img {
 
 /*====================ABOUT====================*/
 .about {
-    width: 1600px;
     padding: 0 215px;
 }
 .about-title,
@@ -207,7 +205,6 @@ img {
 
 /*====================OUR TEAM====================*/
 .our-team-section {
-    width: 1600px;
     padding: 0 215px;
     background-color: #F5F4FA;
 }
@@ -256,7 +253,6 @@ img {
 
 /*====================FOOTER====================*/
 .footer {
-    width: 1600px;
     background-color: var(--accent-color-background);
     padding: 0 215px;
     outline: solid 2px #000000;
@@ -265,8 +261,10 @@ img {
     background-color: var(--accent-color-background);
     padding-top: 60px;
     padding-bottom: 60px;
+    
 }
 .logo-footer {
+    display: inline-block;
     color: #FFFFFF;
     margin-bottom: 20px;
 }
@@ -314,7 +312,7 @@ img {
 }
 
 .filter-btn {
-    border:0;
+    border: 0;
     padding: 6px 22px;
     margin-bottom: 34px;
     font-family: var(--main-font);
@@ -330,7 +328,7 @@ img {
 }
 
 .btn:not(:last-child) {
-    margin-left: 8px;
+    margin-right: 8px;
 }
 .filter-btn:hover,
 .filter-btn:focus {
@@ -363,8 +361,11 @@ img {
     line-height: 2;
     letter-spacing: 0.06em;
     color: #212121; 
+    margin-bottom: 4px;
+    width: 322px;
 }
 .project-title-item {
+    width: 322px;
     font-family: var(--main-font);
     font-style: normal;
     font-weight: 400;
