--- a/css/styles.css
+++ b/css/styles.css
@@ -95,11 +95,18 @@ img {
 /*====================HERO====================*/
 .hero {
     background-color: var(--accent-color-background);
+    background-image: linear-gradient(
+        rgba(0, 0, 0, 0.25),
+        rgba(0, 0, 0, 0.25) 
+        ), 
+    url("../img/hero/bg-hero.jpg");
+    /*filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));*/
+    background-repeat: no-repeat;
+    background-size: cover;
     padding: 0 215px;
 }
 .hero .container {
     box-sizing: border-box;
-    background-color: var(--accent-color-background);
     padding-top: 200px;
     padding-bottom: 200px;
     width: 1600;
@@ -244,10 +251,27 @@ img {
 }
 .board {
     width: 270px;
-    height: 368px;
+    min-height: 368px;
     margin: 0;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     background-color: #FFFFFF;
+}
+.sotial-list {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 0 32px 30px 32px;
+}
+.sotial-liss-link {
+    display: flex;
+    width: 44px;
+    height: 44px;
+    background-color: #FFF25F;
+    border-radius: 50%;
+}
+.sotial-list-icon {
+    width: 20px;
+    height: 20px;
 }
 /*====================END OUR TEAM====================*/
 
